# wgpu_renderer

./: .gitignore  xmake.lua
src/: main.cpp
src/native_window/: native_window.c  native_window.h
src/wgpu/: Cargo.toml  build.rs  cbindgen.toml
src/wgpu/src/: lib.rs  native_window.rs  state.rs  texture.rs
